--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
     <main>
       <!-- Join -->
       <section id="join">
-        <img
-          src="images/love.png"
-          alt="ThinkfulCupid - love"
-          class="item-double"
-        />
+        <div class="item-double">
+          <img src="images/love.png" alt="ThinkfulCupid - love" />
+        </div>
         <!-- Add join form here -->
         <div class="join-form-container item">
           <h2>Find your perfect match</h2>
@@ -76,16 +74,18 @@
       <section id="about" class="alternate-background">
         <h2>About</h2>
         <div class="about-container">
-          <img
-            class="item"
-            src="images/sunset-with-heart.png"
-            alt="ThinkfulCupid - Sunset with heart"
-          />
-          <img
-            class="item"
-            src="images/two-people-sunset-candles.png"
-            alt="ThinkfulCupid - Two people with sunset and candles"
-          />
+          <div class="item">
+            <img
+              src="images/sunset-with-heart.png"
+              alt="ThinkfulCupid - Sunset with heart"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="images/two-people-sunset-candles.png"
+              alt="ThinkfulCupid - Two people with sunset and candles"
+            />
+          </div>
           <p class="item-double">
             Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
             fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
@@ -124,11 +124,9 @@
           </ul>
         </div>
 
-        <img
-          class="item"
-          src="images/download.png"
-          alt="Thinkfulbnb - download"
-        />
+        <div class="item">
+          <img src="images/download.png" alt="Thinkfulbnb - download" />
+        </div>
       </section>
 
       <!-- Blog -->
