update form for small screen

--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
         <!-- Add join form here -->
         <div class="join-form-container item">
           <h2>Find your perfect match</h2>
-          <form
-            action="https://formspree.io/f/xleawjvw"
-            method="POST"
-            class="item"
-          >
+          <form action="https://formspree.io/f/xleawjvw" method="POST">
             <label>
               Email
               <input type="email" name="_replyto" />
